# portfolio-optimiser

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  tasks.py
.github/workflows/: test-lint-audit.yml
docs/: README.md
notebooks/: mean_variance_optimisation.ipynb  portfolio_optimisation_basics.ipynb  sharpe_ratio.ipynb  sharpe_ratio_maximisation.ipynb
scripts/: README.md
src/portfoliooptimiser/: constants.py  main.py  market_api.py  plotter.py  portfolio_optimiser.py  ui.py
tests/my_project/: test_main.py
tests/portfoliooptimiser/: test_market_api.py  test_plotter.py  test_portfolio_optimiser.py  test_ui.py
