[project]
name = "portfoliooptimiser"
version = "0.1.0"
description = "A template for a Python project with UV"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tom Aston", email = "mail@tomaston.dev"}
]
dependencies = [
    "fredapi>=0.5.2",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "jupyterlab-lsp>=5.2.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "yfinance>=0.2.65",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "invoke>=2.2.0",
    "pyright>=1.1.403",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfoliooptimiser"]

[tool.uv.workspace]
members = [".",]

[tool.pyright]
pythonVersion = "3.11"
include = [
  "src/portfoliooptimiser/**/*.py",
  "tests/**/*.py"
]
exclude = [
  "tests/",
  "build/",
  "dist/",
  "venv/",
]
reportMissingTypeStubs = false
reportMissingImports = true
reportOptionalSubscript = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
root = "src"
typeCheckingMode = "strict"
